# model-home

./: .gitignore  README.md  pyproject.toml
clip/: README.md  clip.py
dataops/: __init__.py  doc.md  language_dataset.py  vision_dataset.py  vl_dataset.py
llava/: MODELS.md  README.md  examples.py  llava.py
train/: __init__.py  train_template.py
vit/: PRETRAINED.md  README.md  __init__.py  device.py  vitb.py  vitb_pretrained.py  vitb_rope.py  vitl.py  vitl_pretrained.py  vitl_rope.py
