[project]
name = "mlmodels"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "h5py>=3.10.0",
    "matplotlib>=3.10.8",
    "nibabel>=5.4.2",
    "pandas>=2.0.0",
    "pillow>=12.1.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "wandb>=0.25.1",
]
